# 360ghar-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  .wiki-survey-context.md  AGENTS.md  CLAUDE.md  Dockerfile  README.md  app.md  app.yaml  docker-compose.yml  e2e_test.py  peek.py  property_management_admin_agent_portal.md  property_management_plan.md  pyproject.toml  requirements.txt  run.py  splat.splat  test_agent_pipeline.py  test_api_tours.py  test_computed_field.py  test_create_job.py  test_db.py  test_download.py  test_e2e_direct.py  test_e2e_job.py  test_help.py  test_min.py  test_modal.py  test_modal_debug.py  test_modal_e2e.py  test_pipeline.py  test_public.py  test_sandbox_pipeline.py  update_daytona.py
.github/workflows/: tests.yml  wiki.yml
.wiki/: .wiki-meta.json  Home.md  _Footer.md  _Sidebar.md  by-the-numbers.md  deployment.md  lore.md  maintainers.md  security.md
.wiki/api/: authentication.md  index.md
.wiki/background/: design-decisions.md  index.md  pitfalls.md
.wiki/cleanup-opportunities/: complexity-hotspots.md  index.md  todos-and-fixmes.md
.wiki/features/: ai-agent.md  blog.md  data-hub.md  flatmates.md  ghar-core.md  index.md  mcp-servers.md  notifications.md  property-management.md  stays.md  vastu.md  virtual-tours.md
.wiki/how-to-contribute/: debugging.md  development-workflow.md  index.md  patterns-and-conventions.md  testing.md  tooling.md
.wiki/how-to-monitor/: index.md  logging.md
.wiki/overview/: architecture.md  getting-started.md  glossary.md  index.md
.wiki/primitives/: agent.md  booking.md  index.md  lease.md  property.md  tour.md  user.md  visit.md
.wiki/reference/: configuration.md  data-models.md  dependencies.md  index.md
.wiki/systems/: api-layer.md  cache-subsystem.md  core-cross-cutting.md  index.md  infrastructure.md  models.md  repositories.md  services-layer.md  vector-search.md
.wiki/video/: README.md  package-lock.json  package.json  render.sh  tsconfig.json
app/: factory.py  main.py
app/api/: share.py
app/core/: auth.py  config.py  database.py  db_resilience.py  exceptions.py  logging.py  websocket.py
app/infrastructure/: errors.py  lifespan.py
app/mcp/: __init__.py  admin_server.py  apps_sdk.py  auth_provider.py  errors.py  logging_filters.py  server.py  user_server.py  utils.py  validation.py
app/middleware/: rate_limit.py  security.py  trailing_slash.py
app/models/: __init__.py  agents.py  blogs.py  bookings.py  data_hub.py  enums.py  models.py  payments.py  properties.py  social.py  tours.py  users.py
app/repositories/: property_query_builder.py  property_repository.py
app/schemas/: __init__.py  agent.py  amenity.py  blog.py  booking.py  common.py  core.py  custom_domain.py  data_hub.py  flatmates.py  pagination.py  payment.py  pm_lease.py  property.py  storage.py  tour.py  tour_json.py  user.py  visit.py
app/services/: agent.py  blog.py  blog_auto_publish_scheduler.py  booking.py  core.py  custom_domain.py  email.py  image_processing.py  lab_pipeline.py  modal_worker.py  notification_config.py  notification_dispatcher.py  notification_scheduler.py  notifications.py  oauth_token_store.py  payments.py  pm_applications.py  pm_authz.py  pm_documents.py  pm_inspections.py  pm_leases.py  pm_maintenance.py  pm_properties.py  pm_rent.py  pm_reports.py  property.py  sms.py  splat_cleanup.py  splat_segmentation.py  splat_view_augment.py  storage.py  storage_paths.py  swipe.py  tour.py  tour_ai.py  user.py  vector_sync_scheduler.py  visit.py
app/utils/: validators.py
app/vector/: backfill.py  compose.py  embedding_client.py  store.py  sync.py
chatgpt-widgets/: README.md
chatgpt-widgets/scripts/: build-widgets.js
data/nerfstudio_images/: README.md  SPLAT_COORD_AUDIT.json
docs/: architecture-contract.md  continuous-from-one-room.md  feature-stories.csv  flatmates-openapi.yaml  housetour-data.md  owner_app.md  property_management_admin_agent_portal.md  property_management_plan.md  repo-contract.json  splat-ai-augment-plan.md  splat-pipeline-v2.md  splat-pipeline-v3-diagnosis.md  testing-contract.md  visit_api_docs.md
docs/postman/: admin-dashboard-collection.json  postman-collection.json  postman-environment.json  property-management-collection.json  property-management-environment.json  virtual-tours-collection.json
populate_data/: README.md  load_comprehensive_data.py  populate_faqs.py
populate_data/data/: agents.json  amenities.json  faqs.json  users.json
populate_data/data_populators/: agent_populator.py  amenity_populator.py  base.py  faq_populator.py  property_populator.py  user_populator.py
scripts/: audit_kitchen_coords.py  list_official_sfm_job.py  migrate_blog_status.py  optimize_seed_images.py  probe_colmap_db.py  run_housetour_splat.py  run_kitchen_splat.py  run_supabase_migrations.py  sfm_official_equirect_experiment.py  sync_wiki.py  validate_docs_contracts.py
seed_data/: 01_load_all.py  02_clear_data.py  03_create_auth_users.py  README.md  fix_user_images.py  optimize_media.py  shared.py
seed_data/generators/: 01_generate_seed_data.py  02_generate_activity.py  03_generate_media.py
seed_data/loaders/: 01_base.py  02_hardcoded_loader.py  03_seed_loader.py  04_activity_loader.py  05_media_loader.py
supabase/migrations/: 001_floor_plans.sql  20250829000100_make_user_email_optional.sql  20250915000210_add_faqs.sql  20251010000200_add_active_to_blog_posts.sql  20251109000100_add_pgvector_property_embeddings.sql  20251109000200_add_notification_tables.sql  20260715_splat_jobs.sql  (+18 more)
tests/: __init__.py  conftest.py
tools/: backfill_missing.py  db_insert_property.py  db_update.py  semantic_query_test.py
(+316 files in other folders)
